syntax = "proto3";
package msg;

option go_package = "pkg/message";

message Message {
    oneof body {
        ChatMessage chat_message = 1;
        ConnectedClientsMessage connected_clients_message = 2;
        ClientInfoMessage client_info_message = 3;
    }
}

message ChatMessage {
    string text = 1;
    string sender_id = 2;
    string recipient_id = 3;
}

message ConnectedClientsMessage {
    message ConnectedClient {
      string name = 1;
      string id = 2;
    }

    repeated ConnectedClient clients = 1;
}

message ClientInfoMessage {
    string name = 1;
}



